--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,7 @@ Desktop.ini
 
 # Android
 .csettings
+kuka_kr10/templates/KR10_template_drawing_vertical.3dm.rhl
+kuka_kr10/templates/KR10_template_drawing_vertical.3dmbak
+kuka_kr10/templates/KR10_Workcell.3dm.rhl
+kuka_kr10/templates/KR10_Workcell.3dmbak
