--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ kuka_kr10/templates/KR10_template_drawing_vertical.3dm.rhl
 kuka_kr10/templates/KR10_template_drawing_vertical.3dmbak
 kuka_kr10/templates/KR10_Workcell.3dm.rhl
 kuka_kr10/templates/KR10_Workcell.3dmbak
+*.3dmbak
+*.rhl
