--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,4 @@ kuka_kr10/templates/KR10_Workcell.3dm.rhl
 kuka_kr10/templates/KR10_Workcell.3dmbak
 *.3dmbak
 *.rhl
+kuka_kr10/MDPE/3D_models/fan.blend1
